Twenty Nineteen: Fix alignment of page title when there are no posts.
Fix the alignment of the "Nothing Found" page title when there are no posts, to match how it appears for the search results when nothing is found, and the 404 page. 

Props kjellr, lorenzone92.
Fixes #45887.


Built from https://develop.svn.wordpress.org/trunk@44652


git-svn-id: http://core.svn.wordpress.org/trunk@44483 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentynineteen/sass/site/primary/_archives.scss
+++ b/wp-content/themes/twentynineteen/sass/site/primary/_archives.scss
@@ -50,6 +50,7 @@
 .error-404.not-found,
 .no-results.not-found {
 
+	.page-title,
 	.page-content {
 
 		margin: calc(3 * #{$size__spacing-unit}) #{$size__spacing-unit};
